# de-sprint-9

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  con_to_pg.py  config.yaml  connect-to-redis.py  connector.py  docker-compose.yaml  kafka-input-msg.json  project-config.yaml  pyproject.toml  restaurants.json  t.json  t.sh  test-kafka.py  users.json
apps/cdm-collector-app/: Dockerfile  run.py
apps/cdm-collector-app/helm/: Chart.yaml  values.yaml
apps/dds-collector-app/: Dockerfile  run.py
apps/dds-collector-app/helm/: Chart.yaml  values.yaml
apps/producer-app/: Dockerfile  run.py
apps/stg-collector-app/: Dockerfile  run.py  t.py
apps/stg-collector-app/helm/: Chart.yaml  values.yaml
cloud/kafka/: create-topic.sh
docker/stg-collector-app/: Dockerfile
scripts/: insert-restaurants.sh  insert-users.sh  kafka.sh  send.sh  t.json  t.sh
scripts/sql/: dwh-ddl.sql
services/stg-collector-app/: run.py  t.py  test.py
src/: __init__.py
src/clients/: __init__.py
src/clients/kafka/: __init__.py
src/clients/mongo/: __init__.py
src/clients/redis/: __init__.py
src/kafka/: __init__.py
src/logger/: __init__.py
src/postgre/: __init__.py
src/processor/: __init__.py  stage.py
src/processor/cdm/: __init__.py
src/processor/common/: __init__.py
src/processor/dds/: __init__.py  builder.py  datamodel.py  processor.py
src/processor/stg/: __init__.py  insert-order-event-row.sql
src/producer/: __init__.py
src/redis/: __init__.py
tests/: t.json  t.py  test.py
tests/kafka/consumer/: test_consumer.py
tests/kafka/producer/: kafka-input-msg.json  test_kafka.py
tests/processor/: test_processor.py
tests/redis/: test_redis.py
