[tool.poetry]
name = "de-sprint-9"
version = "0.1.0"
description = ""
authors = ["Grishenkov Leonid <grishenkovleonid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.6.0"
python-dotenv = "^1.0.0"
kafka-python = "^2.0.2"
psycopg2-binary = "^2.9.7"
pyyaml = "^6.0.1"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
